# google-fifa-26

./: .dockerignore  .gitignore  .gitignore.backup  Dockerfile  FINAL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  SUBMISSION_GUIDE.md  fix_mypy.py  pyproject.toml  render.yaml  requirements.txt  run_tests.py  vercel.json
api/: advice.py  index.py
data/: kb_chunks.json  stadium_graph.gexf  stadium_graph.json
frontend/: app.js  index.html  index.html.backup  style.css
prompts/: stadium_assistant_prompt.txt  system_prompt.json
src/: api.py  api.py,cover  api.py.backup  generate_graph.py  generate_graph.py,cover  jwt.py,cover  sensor_mock.py  sensor_mock.py,cover
tests/: jwt_shim.py  test_api_comprehensive.py  test_basic.py  test_coverage_gaps.py  test_generate_graph.py  test_new_features.py  test_new_features.py.backup  test_sensor_mock.py
