[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanwayfinder"
version = "2.1.0"
description = "AI-powered stadium navigation assistant for FIFA World Cup 2026"
authors = [
    {name = "FanWayfinder Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "networkx>=3.1",
    "paho-mqtt>=1.6.1",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "slowapi>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "ruff>=0.5.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = false
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_none = true

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "N"]
ignore = ["E501"]  # line length handled separately

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]  # allow hardcoded passwords in tests
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--strict-config",
]